--- a/themes/pocketdoc/layouts/partials/dev/dev-tools.html
+++ b/themes/pocketdoc/layouts/partials/dev/dev-tools.html
@@ -1,5 +1,5 @@
 {{ if hugo.IsServer }}
-<div class="fixed top-0 right-0 mt-12 mr-8 z-50">
+<div class="print:hidden fixed top-0 right-0 mt-12 mr-8 z-50">
     {{- partial "dev/size-indicator.html" . -}}
     {{- partial "dev/container-indicator.html" . -}}
     {{- partial "dev/parameters.html" . -}}
