--- a/themes/pocketdoc/layouts/_default/single.html
+++ b/themes/pocketdoc/layouts/_default/single.html
@@ -2,6 +2,8 @@
 <article
     class="justify-self-center mx-auto px-6 mb-16 sm:px-4 md:px-0 prose dark:prose-invert prose-slate lg:prose-lg hover:prose-a:text-sky-500">
     <h1>{{ .Title }}</h1>
+    <div class="hyphens-auto">
     {{ .Content }}
+    </div>
 </article>
 {{ end }}
