--- a/themes/pocketdoc/layouts/docs/list.html
+++ b/themes/pocketdoc/layouts/docs/list.html
@@ -2,8 +2,10 @@
 {{ range .Pages.ByParam "page"}}
 <article
     class="justify-self-center mx-auto mb-16 px-6 sm:px-4 md:px-0 prose dark:prose-invert prose-slate lg:prose-lg hover:prose-a:text-sky-500">
-    <h1 class="font-bold"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+    <h1 class="font-bold pb-2"><a href="{{ .RelPermalink }}">{{ .Title }}</a></h1>
+    <div class="hyphens-auto">
     {{ .Content }}
+    </div>
 </article>
 {{ end }}
 {{ end }}
