--- a/themes/pocketdoc/assets/css/styles.css
+++ b/themes/pocketdoc/assets/css/styles.css
@@ -23,7 +23,16 @@
   h4,
   h5,
   h6 {
-    @apply font-bold pb-3 text-lg;
+    @apply font-bold pb-2 text-lg;
+  }
+
+  h1:not(:first-of-type),
+  h2:not(:first-of-type),
+  h3:not(:first-of-type),
+  h4:not(:first-of-type),
+  h5:not(:first-of-type),
+  h6:not(:first-of-type) {
+    @apply mt-4;
   }
 
   p,
@@ -71,7 +80,23 @@ nav a[aria-current="page"] {
   @apply dark:text-red-300 text-red-800 pointer-events-none;
 }
 
-nav a:not(nav a.ancestor):hover::after {
+nav > ul > li > ul a:hover::after {
   content: " →";
   @apply dark:text-red-300 text-red-800;
+}
+
+.highlight {
+  @apply !mb-2 !bg-transparent;
+}
+
+.chroma code {
+  @apply !w-full !font-mono;
+}
+
+.chroma * {
+  @apply !font-mono;
+}
+
+.befehlsliste {
+  @apply rounded border py-3 px-4;
 }
